# prp

./: README.md  compile.sh
032/347/: SHA256E-s223862784--ed03115820dad0f52009e55a3af086a3627e9cd2b372ae1d8b1d830720b0e4f8.log.web
2a0/58d/: SHA256E-s21675--72ff10d5e22cf7a869e751706ae11648211a632cf44ccb002b01967a15f034a3.log.web
components/RenderOSG/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  RenderOSG.cdsl  cmake_install.cmake  run.sh
components/benchmark/: CMakeLists.txt  DoxyFile  README.md  benchmark.cdsl
components/experimentOracle/: CMakeLists.txt  README.md  experimentOracle.cdsl
components/fitPointCloud/: CMakeLists.txt  DoxyFile  README.md  fitPointCloud.cdsl
components/objectDetection/: CMakeLists.txt  DoxyFile  objectDetection.cdsl
components/objectDetection/src/: .specificworker.cpp.kate-swp  CMakeLists.txt  CMakeListsSpecific.txt  apriltagsI.cpp  apriltagsI.h  config.h  createDescriptors.cpp  createVFH.cpp  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  objectdetectionI.cpp  objectdetectionI.h  specificmonitor.cpp  specificworker.cpp  specificworker.h
components/objectDetection/src/descriptors/: descriptors.cpp  descriptors.h
components/objectDetection/src/pointcloud/: pointcloud.cpp  pointcloud.h
components/objectDetection/src/shapes/: table.cpp  table.h
components/objectDetection/src/vfh/: vfh.cpp  vfh.h
components/objectDetection/src/viewer/: viewer.cpp  viewer.h
components/objectDetection2/: objectDetection.cdsl  saved.pcd  seen.pcd  training_data.h5  training_data.list
components/objectDetectionCNN/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  README.md~  cmake_install.cmake  objectDetectionCNN.cdsl  objectDetection_CNN.cdsl~  run.sh
components/objectOracle/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  cmake_install.cmake  objectoracle.cdsl
components/objectOracle/src/: CMakeLists.txt  CMakeListsSpecific.txt  Makefile  ObjectOracle.cpp  ObjectOracle.h  agmcommonbehaviorI.cpp  agmexecutivetopicI.cpp  caffeClassifier.cpp  caffeClassifier.h  cmake_install.cmake  config.h  feature_vectors.h  genericworker.cpp  genericworker.h  labeler.cpp  labeler.h  main.cpp  mainUI.ui  mapmodel.cpp  mapmodel.h  moc_agmcommonbehaviorI.cxx_parameters  moc_agmexecutivetopicI.cxx_parameters  moc_commonbehaviorI.cxx_parameters  moc_genericmonitor.cxx_parameters  moc_genericworker.cxx_parameters  moc_objectoracleI.cxx  moc_objectoracleI.cxx_parameters  moc_specificmonitor.cxx_parameters  moc_specificworker.cxx_parameters  objectoracleI.cpp  objectoracleI.h  specificmonitor.cpp  specificmonitor.h  specificworker.cpp  specificworker.cpp.new  specificworker.h  specificworker.h.new  ui_mainUI.h
components/objectOracle/src/__/__/__/__/__/classes/agmInner/: moc_agmInner.cxx_parameters
components/objectOracle/src/ccv/: ccv_convnet.c  ccv_resample.c
components/objectOracle/src/ccv/io/: _ccv_io_libpng.c
components/objectagent/: objectagent.cdsl
components/rgbdGrabber/: CMakeLists.txt  DoxyFile  README.md  rgbdGrabber.cdsl
components/semanticSimilarity/: CMakeLists.txt  README.md  semanticSimilarity.cdsl
components/testObjectDetection/: .9e1fbe9cf013c9b99d95cbd68ad5aaecb0cf244c.cam  CMakeLists.txt  DoxyFile  README.md  testObjectDetection.cdsl
components/testobjectDetectionCNN/: CMakeLists.txt  DoxyFile  Makefile  README.md  README.md~  cmake_install.cmake  testobjectDetectionCNN.cdsl
components/testobjectDetectionCNNsimulation/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  README.md~  cmake_install.cmake  run.sh  testODCNNsimulation.cdsl
components/trainCNN/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  run.sh  (+2 more)
etc/: agminneragent.conf  apriltags.conf  deployment.xml  executive.conf  genericPointCloud.xml  globaltrajectory.conf  graspingAgent.conf  ikg.conf  initialModel.xml  mission.conf  navigation.conf  objectagent.conf  objectoracle.conf  targetModel.aggt  testObjectDetection.conf  testpipe.xml  trajectoryrobot2d.conf  vik.conf
experimentFiles/: initialModel.xml  tables_info.data  targetModel.xml
planningDomain/: domain.aggl  domain_basic.aggl  domain_basic_perception.aggl  domain_coffeepot_perception.aggl  domain_hierarchical.aggl  domain_manipulation.aggl  domain_milk_perception.aggl  domain_mug_perception.aggl  domain_navigation.aggl  domain_perception.aggl  domain_table_perception.aggl  initialModel0.xml  initialModel1.xml
(+231 files in other folders)
